--- a/src/lang/en-US.yaml
+++ b/src/lang/en-US.yaml
@@ -10,7 +10,8 @@ phrases:
         panels:
             home:
                 title: Info
-                pane: This shows a lot of OpenStreetMap data that you normally do not see.
+                pane: >
+                This shows a lot of OpenStreetMap data that you normally do not see.
             sceneswitcher:
                 title: Scene Switcher
             legend:
