--- a/src/lang/nl-NL.yaml
+++ b/src/lang/nl-NL.yaml
@@ -52,6 +52,8 @@ phrases:
                     description: Wegen tussen steden
     keys:
         kind: Soort
+        kind_detail: Soort (detail)
+        landuse_kind: Grondgebruik
         name: Naam
         id: OpenStraatKaart Nummer
         source: Bron
