Added WMS support and dynamic configurations

--- a/src/lang/en-US.yaml
+++ b/src/lang/en-US.yaml
@@ -23,6 +23,10 @@ phrases:
                 title: Info
             images:
                 title: Images
+            wms:
+                title: Historic Maps
+                layers: layers
+                transparancy: Transparancy
             settings:
                 title: Settings
                 en-US: English
